fix scrollbar

--- a/src/styles/admin/dashboard.css
+++ b/src/styles/admin/dashboard.css
@@ -172,24 +172,21 @@ main h1 {
 .data-page {
   width: 100%;
   font-family: sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   background-color: white;
   border-radius: 15px;
   height: calc(100vh - 164.3133px);
   padding: 10px;
-  overflow: scroll;
 }
 
 .data-page table {
   width: 100%;
   text-align: center;
+  overflow: auto;
 }
 
 .data-page table th {
   position: sticky;
-  top: 5px;
+  top: 0;
   padding: 5px 0;
   background-color: #6c9f6d;
   border-radius: 10px;
@@ -200,10 +197,6 @@ main h1 {
   width: 5em;
   height: .3em;
   overflow: hidden;
-}
-
-.data-page table td {
-  overflow: scroll;
 }
 
 .data-page table td a {
@@ -254,6 +247,15 @@ main h1 {
   width: 40px;
 }
 
+.table-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  overflow: auto;
+}
+
 @media print, screen and (min-width: 768px) {
   .data-page {
     width: 90%;
@@ -296,7 +298,6 @@ main h1 {
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    overflow: scroll;
   }
 
   .desktop-heading {
