--- a/src/styles/admin/setting.css
+++ b/src/styles/admin/setting.css
@@ -176,7 +176,6 @@ main h1 {
   border-radius: 15px;
   height: calc(100vh - 135.1967px);
   padding: 10px;
-  overflow: scroll;
 }
 
 .content form label {
@@ -320,7 +319,6 @@ hr {
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    overflow: scroll;
   }
 
   .desktop-heading {
