--- a/src/styles/admin/view.css
+++ b/src/styles/admin/view.css
@@ -18,12 +18,10 @@
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-}
 
 body {
   padding: 10px;
+  padding-bottom: 20px;
   background-color: #4b8352;
 }
 
@@ -174,9 +172,7 @@ main h1 {
   font-family: sans-serif;
   background-color: white;
   border-radius: 15px;
-  height: calc(100vh - 52px - 1.3em);
   padding: 15px;
-  overflow: scroll;
   margin-top: 1.3em;
 }
 
@@ -258,10 +254,6 @@ table tr:not(:nth-last-child(1)) {
   border-bottom: 1px solid #999;
 }
 
-.table-3 table {
-  width: 100%;
-}
-
 @media print, screen and (min-width: 768px) {
   .data-page {
     width: 90%;
@@ -273,6 +265,10 @@ table tr:not(:nth-last-child(1)) {
 }
 
 @media print, screen and (min-width: 992px) {
+  html, body {
+    height: 100%;
+  }
+
   .desktop-content {
     display: flex;
     height: calc(100vh - 68.0167px);
@@ -299,7 +295,6 @@ table tr:not(:nth-last-child(1)) {
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    overflow: scroll;
     margin-top: 0;
   }
 
@@ -308,6 +303,7 @@ table tr:not(:nth-last-child(1)) {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: auto;
   }
 
   .table-container {
@@ -327,6 +323,10 @@ table tr:not(:nth-last-child(1)) {
   .table-1, .table-2, .table-3 {
     width: 40%;
     padding: 0 2em;
+  }
+
+  .table-3 table {
+    width: 100%;
   }
 
   hr {
